# Sem_5

./: .gitignore
jftt/l1/: finite_automata.py  knuth_morris_pratt.py  tests.py
jftt/l1/tests/: tests-EMOJI.txt
jftt/l2/: excersize1.flex  excersize2.flex  excersize3.flex  excersize4.flex
jftt/l2/test/: l2z1b.txt  test.py
jpp/l1/: .gitignore  CMakeLists.txt  main.c
jpp/l1/ada/: CMakeLists.txt  default.gpr
jpp/l1/ada/src/: greet.adb
jpp/l1/mylib/: CMakeLists.txt
jpp/l1/mylib/include/: my_math.h
jpp/l1/mylib/src/: c_functions.adb  c_functions.ads  default.gpr  my_math.c  mylib.ads
jpp/l1/mylib/src/iter/: mylib.adb
jpp/l1/mylib/src/lib/: c_functions.ali  mylib.ali
jpp/l1/mylib/src/rec/: mylib.adb
jpp/l1/python/: main.py
jpp/l1/python/mylib/: c_wrapper.py  iterative.py  recursive.py
jpp/l2/: .gitignore
jpp/l2/cpp/: CMakeLists.txt
jpp/l2/cpp/src/: finite_field.cpp  finite_field.h  main.cpp  math_util.h
jpp/l2/java/finite_field/: pom.xml
jpp/l2/java/finite_field/src/main/java/com/finite_field/: App.java  FiniteField.java  MathUtil.java
jpp/l2/java/finite_field/src/test/java/com/finite_field/: AppTest.java
jpp/l2/python/: finite_field.py  math_util.py  test_gf.py
on/l1/: List1.jl  graphs.py
sp/l1/: count_words.sh  find_repeating.sh  list_regular_files.sh  to_upper_A.sh  word_to_file_list.sh  word_to_file_list_with_line.sh
